# space-object-tracker

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  main.yml
src/: main.py
src/adapters/: data_source_api.py  database_storage.py
src/application/: api.py  config.py  orchestrator.py  session.py
src/tracker/: models.py
src/tracker/models/: satellite.py  space_object.py  vector3d.py
src/tracker/schema/: base_model.py  satellite.py  space_object.py  vector3_d_model.py
tests/: conftest.py
tests/adapters/: test_data_source_api.py  test_database_storage.py
tests/application/: test_api.py
